Fixed minor alignment issue

--- a/res/css/_content.sass
+++ b/res/css/_content.sass
@@ -218,15 +218,12 @@
 
         .message
           display: flex
-          line-height: 24px
+          line-height: 20px
           padding: 12px 24px
           border-bottom: 1px solid #e5e5e5
           color: #212121
           background: #fff
           position: relative
-
-          @media(max-width: 800px)
-            line-height: 1rem
 
           > .more
             height: 56px
